@@ -5,6 +5,7 @@ FAMILIA, CHANGES
 
 * FIXED: Explicitly convert boolean conf options to true or false. Redis client
   treats "true" as false.
+* FIXED: Clone options for each RedisObject instance to prevent cross contamination.
 * CHANGE: Fix for Familia objects with custom suffixes
 * CHANGE: Familia::String methods that modify the key now automatically update_expiration.
 * ADDED: Familia.qnow, Familia::Object.qstamp, RedisObject#qstamp
